vlib/v/checker/tests/division_by_zero_int_err.vv
fn main() {
	println(1/0)
	println(1/0x0)
	println(1/0b0)
	println(1/0o0)
}
